Fixing extra space on main page.

--- a/doxygen.css
+++ b/doxygen.css
@@ -2442,7 +2442,7 @@ details[open]>summary::before {
 
 
 html {
---timestamp: 'Fri Aug 15 2025 15:02:36'
+--timestamp: 'Fri Aug 15 2025 15:10:27'
 }
 span.timestamp { content: ' '; }
 span.timestamp:before { content: var(--timestamp); }
